# 2024-dec-hackathon

./: README.md  feedback.md  plan.md
claimable/: Cargo.toml  Forc.toml
claimable/src/: main.sw
claimable/tests/: harness.rs
claims-contract/: Cargo.toml  Forc.toml
claims-contract-abi/: Forc.toml
claims-contract-abi/src/: lib.sw
claims-contract/src/: main.sw
claims-contract/tests/: harness.rs
kpop/: Cargo.toml
kpop-app/: Cargo.toml  README.md
kpop-app/src/: app.rs  args.rs  comp.rs  lib.rs  main.rs  model.rs  server.rs  shared.rs
kpop-app/src/comp/: balance_table.rs  base.rs  claims.rs  fund.rs  make_claim.rs  predicate_balances.rs  send_amount.rs  theme_switch.rs  wallet_balances.rs  wallet_info.rs
kpop-app/style/: main.scss
kpop/src/: lib.rs  main.rs
make-claim/: Forc.toml
make-claim/src/: main.sw
