[package]
name = "claimable"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Mårten Blankfors <marten@blankfors.se>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = "0.66.2"
fuel-core-client = { version = "0.40" }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
